# vetis

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-docker-full.yml  build-docker-php.yml  build-docker-python.yml  build-docker-ruby.yml  release.yml  rust.yml
.samoyed/: pre-commit
docs/: CONTRIBUTING.md  LANGUAGE_SUPPORT.md  LICENSE.md  _config.yml  configuration.md  index.md  llms.txt  standalone-server.md  vetis.md
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: config.rs  lib.rs
src/server/: config.rs  errors.rs  http.rs  mod.rs  quic.rs  tcp.rs  tls.rs  udp.rs
src/server/conn/: mod.rs
src/server/conn/listener/: mod.rs  tcp.rs  udp.rs
src/server/virtual_host/: mod.rs
src/server/virtual_host/directory/: handler.rs  mod.rs  static.rs
src/tests/: config.rs
vetis/: Cargo.toml  Dockerfile  Dockerfile.php  Dockerfile.python  Dockerfile.ruby  README.md
vetis-macros/: Cargo.toml
vetis-macros/src/: lib.rs
vetis-macros/tests/: mod.rs
vetis/src/: config.rs  errors.rs  lib.rs  main.rs
vetis/src/config/server/: mod.rs
vetis/src/config/server/virtual_host/: mod.rs
vetis/src/config/server/virtual_host/path/: auth.rs  interface.rs  mod.rs  proxy.rs  static_files.rs
vetis/src/server/: auth.rs  http.rs  mod.rs  path.rs  virtual_host.rs
vetis/src/server/conn/listener/: mod.rs  tcp.rs  udp.rs
vetis/src/server/virtual_host/: mod.rs
vetis/src/server/virtual_host/path/: mod.rs
vetis/src/server/virtual_host/path/auth/: basic_auth.rs  mod.rs
vetis/src/server/virtual_host/path/gate/: mod.rs
vetis/src/server/virtual_host/path/interface/: mod.rs
vetis/src/server/virtual_host/path/interface/python/: mod.rs
vetis/src/server/virtual_host/path/interface/python/asgi/: mod.rs
vetis/src/server/virtual_host/path/interface/python/rsgi/: mod.rs
vetis/src/server/virtual_host/path/interface/python/wsgi/: callback.rs  mod.rs
vetis/src/server/virtual_host/path/interface/ruby/: mod.rs
vetis/src/server/virtual_host/path/interface/ruby/rsgi/: mod.rs
vetis/src/server/virtual_host/path/proxy/: mod.rs
vetis/src/server/virtual_host/path/static_files/: mod.rs
vetis/src/tests/: config.rs  mod.rs  paths.rs  server.rs  tls.rs  virtual_host.rs
vetis/src/tests/files/: .htpasswd  index.html
vetis/src/utils/: date.rs
