[package]
name = "vetis"
version = "0.1.3"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/vetis"
homepage = "https://github.com/ararog/vetis"
description = "Very Tiny Server"
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "server", "rest-server"]
publish = true
rust-version = "1.75.0"

[features]
default = ["tokio-rt", "http1", "tokio-rust-tls"]

tokio-rt = [
  "tokio",
  "rt-gate/tokio-rt",
  "hyper-util/tokio",
  "tokio/rt-multi-thread",
  "tokio/net",
  "tokio/signal",
  "peekable/tokio",
]
smol-rt = [
  "smol",
  "smol-hyper",
  "smol-macros",
  "rt-gate/smol-rt",
  "dep:async-signal",
  "dep:signal-hook",
  "peekable/tokio",
]

tokio-rust-tls = ["tokio-rustls", "rustls", "rustls-provider"]
smol-rust-tls = ["futures-rustls", "rustls", "rustls-provider"]

rustls-provider = [
    "__rustls_awc_lc_rs"
]

__rustls_awc_lc_rs = [
    "futures-rustls/aws-lc-rs"
]

__rustls_ring = [
    "futures-rustls/ring"
]

__rustls_rustcrypto = [ 
    "dep:rustls-rustcrypto"
]

http1 = ["hyper/http1", "hyper/server", "hyper-util/server", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper/server", "hyper-util/server", "hyper-util/http2"]
http3 = ["hyper/server", "hyper-util/server", "h3", "h3-quinn", "quinn"]

[dependencies]
async-signal = { version = "0.2.12", optional = true }
bytes = "1.11.0"
futures-lite = "2.6.1"
futures-rustls = { version = "0.26.0", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
http = "1.3.1"
http-body-util = { version = "0.1.3" }
hyper = { version = "1.8.1", default-features = false, optional = true }
hyper-util = { version = "0.1.19", default-features = false, optional = true }
log = "0.4.28"
mime = "0.3.17"
peekable = { version = "0.4.1", optional = true }
quinn = { version = "0.11.7", optional = true }
rand = "0.9.2"
rt-gate = { version = "0.1.3", optional = true, default-features = false }
rustls = { version = "0.23.19", features = [
  "aws-lc-rs",
], default-features = false, optional = true }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true }
serde = "1.0.226"
serde_json = "1.0.145"
signal-hook = { version = "0.4.3", optional = true }
smol = { version = "2.0.2", optional = true }
smol-hyper = { version = "0.1.1", optional = true }
smol-macros = { version = "0.1.1", optional = true }
thiserror = "2.0.17"
tokio = { version = "1.38.1", default-features = false, optional = true }
tokio-rustls = { version = "0.26.0", optional = true }
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.38.1", default-features = false, features = ["macros"] }
