[package]
name = "vetis"
version = "0.1.4-beta.5"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/vetis"
homepage = "https://github.com/ararog/vetis"
description = "Very Tiny Server"
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "server", "rest-server"]
publish = true
rust-version = "1.75.0"

[package.metadata.wix]
upgrade-guid = "76DF79DF-E1F9-40A7-89D1-3190562C7851"
path-guid = "FEA82F70-7E57-447F-A361-76FB5E25BA5F"
license = false
eula = false

[features]
default = [
  "tokio-rt",
  "http1",
  "tokio-rust-tls",
  # Leaving them enable for testing purposes, 
  # they must be disabled at time of publish/release.
  "static-files",
  "reverse-proxy",
  "auth",
  "interface",
]

tokio-rt = [
  "dep:tokio",
  "hyper-util/tokio",
  "tokio/rt-multi-thread",
  "tokio/net",
  "tokio/signal",
  "peekable/tokio",
  "rt-gate/tokio-rt",
  "quinn/runtime-tokio",
  "__deboa_tokio",
  "dep:tokio-util",
  "hyper-body-utils/tokio-rt",
  "crossfire/tokio",
]
smol-rt = [
  "dep:smol",
  "dep:smol-hyper",
  "dep:smol-macros",
  "dep:macro_rules_attribute",
  "dep:async-signal",
  "dep:signal-hook",
  "peekable/future",
  "rt-gate/smol-rt",
  "quinn/runtime-smol",
  "__deboa_smol",
  "dep:futures-lite",
  "dep:blocking",
  "hyper-body-utils/smol-rt",
  "crossfire/async_std",
]

tokio-rust-tls = ["tokio-rustls", "rustls", "rustls-provider"]
smol-rust-tls = ["futures-rustls", "rustls", "rustls-provider"]

auth = ["argon2", "bcrypt", "base64"]

interface = ["python", "php", "ruby"]

# TODO: Implement ASGI/WSGI support
python = ["asgi", "rsgi", "wsgi"]
asgi = ["dep:pyo3", "__pyo3_tokio_async"]
rsgi = []
wsgi = ["dep:pyo3", "__pyo3_tokio_async"]
__pyo3_tokio_async = ["pyo3-async-runtimes/tokio-runtime"]
__pyo3_smol_async = ["pyo3-async-runtimes/async-std-runtime"]

# TODO: Implement PHP support
php = ["dep:ripht-php-sapi"]

# TODO: Implemet Ruby support
ruby = ["dep:magnus"]

static-files = ["dep:mime", "dep:minimime", "dep:regex", "dep:lru", "dep:filedescriptor"]

reverse-proxy = []
__deboa_tokio = ["deboa/tokio-rt", "deboa/tokio-rust-tls"]
__deboa_smol = ["deboa/smol-rt", "deboa/smol-rust-tls"]

rustls-provider = ["__rustls_awc_lc_rs"]
__rustls_awc_lc_rs = ["futures-rustls/aws-lc-rs"]
__rustls_ring = ["futures-rustls/ring"]
__rustls_rustcrypto = ["dep:rustls-rustcrypto"]

http1 = [
  "hyper/http1",
  "hyper/server",
  "hyper-util/server",
  "hyper-util/http1",
  "deboa/http1",
]
http2 = [
  "hyper/http2",
  "hyper/server",
  "hyper-util/server",
  "hyper-util/http2",
  "deboa/http2",
]
http3 = [
  "hyper/server",
  "hyper-util/server",
  "dep:h3",
  "dep:h3-quinn",
  "dep:quinn",
  "deboa/http3",
  "hyper-body-utils/http3"
]

[dependencies]
argon2 = { version = "0.5.3", optional = true }
async-signal = { version = "0.2.12", optional = true }
base64 = { version = "0.22.1", optional = true }
bcrypt = { version = "0.19.0", optional = true }
blocking = { version = "1.6.2", optional = true }
bytes = "1.11.1"
cfg-if = "1.0.4"
clap = { version = "4.5.61", features = [
  "derive",
  "std",
], default-features = false }
crossfire = { version = "3.1.7", optional = true, default-features = false }
deboa = { version = "0.1.0-beta.15", default-features = false, optional = true }
env_logger = "0.11.10"
filedescriptor = { version = "0.8.3", optional = true }
futures-lite = { version = "2.6.1", optional = true }
futures-rustls = { version = "0.26.0", optional = true }
futures-util = "0.3.32"
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
http = "1.3.1"
http-body-util = { version = "0.1.3" }
hyper = { version = "1.9.0", default-features = false, optional = true }
hyper-body-utils = { version = "0.1.6-beta.2", optional = true, default-features = false}
hyper-util = { version = "0.1.20", default-features = false, optional = true }
log = "0.4.28"
lru = { version = "0.16.3", optional = true, default-features = false}
macro_rules_attribute = { version = "0.2.2", optional = true }
magnus = { version = "0.8.2", optional = true, features = ["embed"] }
mime = { version = "0.3.17", optional = true }
minimime = { version = "1.0.0", optional = true }
peekable = { version = "0.4.1", optional = true, default-features = false }
pyo3 = { version = "0.27.2", default-features = false, optional = true }
pyo3-async-runtimes = { version = "0.27.0", default-features = false, optional = true }
quinn = { version = "0.11.7", default-features = false, optional = true }
radix_trie = "0.3.0"
rand = "0.9.2"
regex = { version = "1.12.3", optional = true }
ripht-php-sapi = { version = "0.1.0-rc.7", optional = true }
rt-gate = { version = "0.1.3", optional = true, default-features = false }
rustls = { version = "0.23.37", default-features = false, optional = true }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml_ng = "0.10.0"
signal-hook = { version = "0.4.4", optional = true }
smol = { version = "2.0.2", optional = true }
smol-hyper = { version = "0.1.1", optional = true }
smol-macros = { version = "0.1.1", optional = true }
socket2 = "0.6.3"
thiserror = "2.0.17"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.51.1", default-features = false, optional = true }
tokio-rustls = { version = "0.26.0", optional = true }
tokio-util = { version = "0.7.18", optional = true }
url = "2.5.7"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1.48", features = ["v3"] }

[dev-dependencies]
tokio = { version = "1.51.1", default-features = false, features = ["macros"] }
