[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.57", features = ["derive"] }
deboa = "0.1.0-beta"
env_logger = "0.11.8"
http-body-util = "0.1.3"
hyper = "1.8.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
vetis = { version = "0.1.4-beta.1", path = "../../vetis", features = ["http1", "tokio-rt", "tokio-rust-tls", "static-files"], default-features = false }
